fix contrast issue

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html {
     background-color: black;
     color: white;
-    height: 100%;
+    /*height: 100%;*/
 }
 
 body  {
@@ -18,13 +18,12 @@ body  {
     background-attachment: fixed;
     background-position: right 5vw center;
     height: 100%;
-    z-index: 10;
     transition: all 0.8s ease;
-    padding: 50px 50px 50px 0;
+    padding: 50px 50px 0px 0;
 }
 
 .eyeballTop {
-    z-index: 100;
+    z-index: 3;
     position: fixed;
     top: 8vh;
     right: -10vw;
@@ -37,7 +36,7 @@ body  {
 
 }
 .eyeballBottom {
-    z-index: 3;
+    z-index: 100;
     position: fixed;
     bottom: 40px;
     right: 40px;
@@ -68,6 +67,8 @@ header img {
     padding-left: 50px;
     padding-bottom: 100px;
     height: 100%;
+    position: relative;
+    z-index: 10;
 }
 section {
     font-size: 20px;
@@ -111,4 +112,13 @@ section ul li {
     clear: both;
     font-size: 15px;
     margin-top: -10px;
+}
+
+@media only screen and (max-width: 480px) {
+
+    .wrapper {
+        background: linear-gradient(to right, rgba(0,0,0,.8) 80%,rgba(0,0,0,0) 100%);
+    }
+
+    }
 }
